# fastapi-project

./: .coverage  README.md  pyproject.toml
fastapiplayground/: app.py  schemas.py
tests/: conftest.py  test_app.py
